// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateUpdateSecret Create File Secret 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="null-0"
        >
          <label
            class="bp3-label"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="createUpdateSecretForm_secretManagerIdentifier"
            >
              platform.secrets.labelSecretsManager
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
              data-testid="cr-field-secretManagerIdentifier"
              style="width: 100%;"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
                >
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target Text--targetClass"
                    >
                      <p
                        class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
                        tabindex="0"
                      >
                        vault1
                      </p>
                    </span>
                  </span>
                  <div
                    class="rightStatus"
                  >
                    <span
                      class="bp3-icon bp3-icon-full-circle StyledProps--main status greenStatus"
                      data-testid="crf-status"
                      icon="full-circle"
                    >
                      <svg
                        data-icon="full-circle"
                        height="6"
                        viewBox="0 0 16 16"
                        width="6"
                      >
                        <desc>
                          full-circle
                        </desc>
                        <path
                          d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="Tag--main"
                    >
                      <span
                        class="bp3-tag bp3-minimal"
                        id="tag"
                      >
                        <span
                          class="bp3-text-overflow-ellipsis bp3-fill"
                        >
                          account
                        </span>
                      </span>
                    </span>
                  </div>
                </div>
              </span>
              <span
                class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                icon="chevron-down"
              >
                <svg
                  data-icon="chevron-down"
                  height="14"
                  viewBox="0 0 16 16"
                  width="14"
                >
                  <desc>
                    chevron-down
                  </desc>
                  <path
                    d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <span
          class="bp3-popover-wrapper hoverMsg"
        >
          <span
            class="bp3-popover-target hoverMsgTarget"
          >
            <div
              class="InputWithIdentifier--txtNameContainer TextInput--main"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
              >
                <div
                  class="Text--withDocsTooltip"
                  data-tooltip-id="universalInputNameWithId"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    Id
                  </p>
                </div>
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  :
                </p>
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                      tabindex="0"
                    >
                      <span
                        class="bp3-editable-text-content"
                        style="height: 1px; line-height: 1px; min-width: 0;"
                      />
                    </div>
                  </span>
                </span>
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="Edit"
                  style="vertical-align: middle; cursor: pointer;"
                >
                  <svg
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="bp3-form-group"
                data-id="name-1"
              >
                <label
                  class="bp3-label"
                  for="name"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="createUpdateSecretForm_name"
                  >
                    platform.secrets.labelSecretName
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="name"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </span>
        </span>
        <input
          style="display: none;"
          type="text"
        />
        <input
          style="display: none;"
          type="password"
        />
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="file"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="createUpdateSecretForm_file"
            >
              platform.secrets.secret.labelSecretFile
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <label
              class="bp3-file-input bp3-fill"
            >
              <input
                multiple=""
                name="file"
                type="file"
              />
              <span
                bp3-button-text="Browse"
                class="bp3-file-upload-input bp3-file-upload-input-custom-text"
              >
                Choose file...
              </span>
            </label>
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="description"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="createUpdateSecretForm_description"
            >
              description (optional)
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <textarea
              autocomplete="off"
              class="bp3-input bp3-fill"
              maxlength="1024"
              name="description"
            />
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="tags"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="createUpdateSecretForm_tags"
            >
              tagsLabel (optional)
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input bp3-tag-input"
            >
              <div
                class="bp3-tag-input-values"
              >
                <input
                  class="bp3-input-ghost"
                  data-mentions="kv-tag-input-tags"
                  placeholder="Type and press enter to create a tag"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <button
          aria-label="save"
          class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--margin-top-large Button--with-current-color Button--variation Button--variation-primary"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            save
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`CreateUpdateSecret Create Secret with radio button 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="null-0"
        >
          <label
            class="bp3-label"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="createUpdateSecretForm_secretManagerIdentifier"
            >
              platform.secrets.labelSecretsManager
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
              data-testid="cr-field-secretManagerIdentifier"
              style="width: 100%;"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
                >
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target Text--targetClass"
                    >
                      <p
                        class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
                        tabindex="0"
                      >
                        vault1
                      </p>
                    </span>
                  </span>
                  <div
                    class="rightStatus"
                  >
                    <span
                      class="bp3-icon bp3-icon-full-circle StyledProps--main status greenStatus"
                      data-testid="crf-status"
                      icon="full-circle"
                    >
                      <svg
                        data-icon="full-circle"
                        height="6"
                        viewBox="0 0 16 16"
                        width="6"
                      >
                        <desc>
                          full-circle
                        </desc>
                        <path
                          d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="Tag--main"
                    >
                      <span
                        class="bp3-tag bp3-minimal"
                        id="tag"
                      >
                        <span
                          class="bp3-text-overflow-ellipsis bp3-fill"
                        >
                          account
                        </span>
                      </span>
                    </span>
                  </div>
                </div>
              </span>
              <span
                class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                icon="chevron-down"
              >
                <svg
                  data-icon="chevron-down"
                  height="14"
                  viewBox="0 0 16 16"
                  width="14"
                >
                  <desc>
                    chevron-down
                  </desc>
                  <path
                    d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <div
          class="bp3-form-group"
          data-id="type-1"
        >
          <label
            class="bp3-label"
            for="type"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="createUpdateSecretForm_type"
            >
              platform.secrets.secret.labelSecretType
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="StyledProps--main"
            >
              
              <div
                class="RadioButtonGroup--inline"
              >
                <label
                  class="RadioButton--radio StyledProps--main"
                >
                  <input
                    checked=""
                    class="RadioButton--input"
                    name="type"
                    type="radio"
                    value="SecretText"
                  />
                  <span
                    class="RadioButton--radioIcon"
                  />
                  platform.secrets.secret.labelText
                </label>
                <label
                  class="RadioButton--radio StyledProps--main"
                >
                  <input
                    class="RadioButton--input"
                    name="type"
                    type="radio"
                    value="SecretFile"
                  />
                  <span
                    class="RadioButton--radioIcon"
                  />
                  platform.secrets.secret.labelFile
                </label>
              </div>
            </div>
          </div>
        </div>
        <span
          class="bp3-popover-wrapper hoverMsg"
        >
          <span
            class="bp3-popover-target hoverMsgTarget"
          >
            <div
              class="InputWithIdentifier--txtNameContainer TextInput--main"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
              >
                <div
                  class="Text--withDocsTooltip"
                  data-tooltip-id="universalInputNameWithId"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    Id
                  </p>
                </div>
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  :
                </p>
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                      tabindex="0"
                    >
                      <span
                        class="bp3-editable-text-content"
                        style="height: 1px; line-height: 1px; min-width: 0;"
                      />
                    </div>
                  </span>
                </span>
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="Edit"
                  style="vertical-align: middle; cursor: pointer;"
                >
                  <svg
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="bp3-form-group"
                data-id="name-2"
              >
                <label
                  class="bp3-label"
                  for="name"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="createUpdateSecretForm_name"
                  >
                    platform.secrets.labelSecretName
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="name"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </span>
        </span>
        <input
          style="display: none;"
          type="text"
        />
        <input
          style="display: none;"
          type="password"
        />
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="value"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="createUpdateSecretForm_value"
            >
              platform.secrets.labelValue
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="value"
                placeholder="platform.secrets.secret.placeholderSecretValue"
                type="password"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="description"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="createUpdateSecretForm_description"
            >
              description (optional)
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <textarea
              autocomplete="off"
              class="bp3-input bp3-fill"
              maxlength="1024"
              name="description"
            />
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="tags"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="createUpdateSecretForm_tags"
            >
              tagsLabel (optional)
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input bp3-tag-input"
            >
              <div
                class="bp3-tag-input-values"
              >
                <input
                  class="bp3-input-ghost"
                  data-mentions="kv-tag-input-tags"
                  placeholder="Type and press enter to create a tag"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <button
          aria-label="save"
          class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--margin-top-large Button--with-current-color Button--variation Button--variation-primary"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            save
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`CreateUpdateSecret Create Secret with radio button and switch radio from text to file 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="null-0"
        >
          <label
            class="bp3-label"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="createUpdateSecretForm_secretManagerIdentifier"
            >
              platform.secrets.labelSecretsManager
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
              data-testid="cr-field-secretManagerIdentifier"
              style="width: 100%;"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
                >
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target Text--targetClass"
                    >
                      <p
                        class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
                        tabindex="0"
                      >
                        vault1
                      </p>
                    </span>
                  </span>
                  <div
                    class="rightStatus"
                  >
                    <span
                      class="bp3-icon bp3-icon-full-circle StyledProps--main status greenStatus"
                      data-testid="crf-status"
                      icon="full-circle"
                    >
                      <svg
                        data-icon="full-circle"
                        height="6"
                        viewBox="0 0 16 16"
                        width="6"
                      >
                        <desc>
                          full-circle
                        </desc>
                        <path
                          d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="Tag--main"
                    >
                      <span
                        class="bp3-tag bp3-minimal"
                        id="tag"
                      >
                        <span
                          class="bp3-text-overflow-ellipsis bp3-fill"
                        >
                          account
                        </span>
                      </span>
                    </span>
                  </div>
                </div>
              </span>
              <span
                class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                icon="chevron-down"
              >
                <svg
                  data-icon="chevron-down"
                  height="14"
                  viewBox="0 0 16 16"
                  width="14"
                >
                  <desc>
                    chevron-down
                  </desc>
                  <path
                    d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <div
          class="bp3-form-group"
          data-id="type-1"
        >
          <label
            class="bp3-label"
            for="type"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="createUpdateSecretForm_type"
            >
              platform.secrets.secret.labelSecretType
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="StyledProps--main"
            >
              
              <div
                class="RadioButtonGroup--inline"
              >
                <label
                  class="RadioButton--radio StyledProps--main"
                >
                  <input
                    class="RadioButton--input"
                    name="type"
                    type="radio"
                    value="SecretText"
                  />
                  <span
                    class="RadioButton--radioIcon"
                  />
                  platform.secrets.secret.labelText
                </label>
                <label
                  class="RadioButton--radio StyledProps--main"
                >
                  <input
                    checked=""
                    class="RadioButton--input"
                    name="type"
                    type="radio"
                    value="SecretFile"
                  />
                  <span
                    class="RadioButton--radioIcon"
                  />
                  platform.secrets.secret.labelFile
                </label>
              </div>
            </div>
          </div>
        </div>
        <span
          class="bp3-popover-wrapper hoverMsg"
        >
          <span
            class="bp3-popover-target hoverMsgTarget"
          >
            <div
              class="InputWithIdentifier--txtNameContainer TextInput--main"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
              >
                <div
                  class="Text--withDocsTooltip"
                  data-tooltip-id="universalInputNameWithId"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    Id
                  </p>
                </div>
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  :
                </p>
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                      tabindex="0"
                    >
                      <span
                        class="bp3-editable-text-content"
                        style="height: 1px; line-height: 1px; min-width: 0;"
                      />
                    </div>
                  </span>
                </span>
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="Edit"
                  style="vertical-align: middle; cursor: pointer;"
                >
                  <svg
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="bp3-form-group"
                data-id="name-2"
              >
                <label
                  class="bp3-label"
                  for="name"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="createUpdateSecretForm_name"
                  >
                    platform.secrets.labelSecretName
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="name"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </span>
        </span>
        <input
          style="display: none;"
          type="text"
        />
        <input
          style="display: none;"
          type="password"
        />
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="file"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="createUpdateSecretForm_file"
            >
              platform.secrets.secret.labelSecretFile
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <label
              class="bp3-file-input bp3-fill"
            >
              <input
                multiple=""
                name="file"
                type="file"
              />
              <span
                bp3-button-text="Browse"
                class="bp3-file-upload-input bp3-file-upload-input-custom-text"
              >
                Choose file...
              </span>
            </label>
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="description"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="createUpdateSecretForm_description"
            >
              description (optional)
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <textarea
              autocomplete="off"
              class="bp3-input bp3-fill"
              maxlength="1024"
              name="description"
            />
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="tags"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="createUpdateSecretForm_tags"
            >
              tagsLabel (optional)
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input bp3-tag-input"
            >
              <div
                class="bp3-tag-input-values"
              >
                <input
                  class="bp3-input-ghost"
                  data-mentions="kv-tag-input-tags"
                  placeholder="Type and press enter to create a tag"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <button
          aria-label="save"
          class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--margin-top-large Button--with-current-color Button--variation Button--variation-primary"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            save
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`CreateUpdateSecret Create Secret with radio button and switch radio from text to file and back 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="null-0"
        >
          <label
            class="bp3-label"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="createUpdateSecretForm_secretManagerIdentifier"
            >
              platform.secrets.labelSecretsManager
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
              data-testid="cr-field-secretManagerIdentifier"
              style="width: 100%;"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
                >
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target Text--targetClass"
                    >
                      <p
                        class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
                        tabindex="0"
                      >
                        vault1
                      </p>
                    </span>
                  </span>
                  <div
                    class="rightStatus"
                  >
                    <span
                      class="bp3-icon bp3-icon-full-circle StyledProps--main status greenStatus"
                      data-testid="crf-status"
                      icon="full-circle"
                    >
                      <svg
                        data-icon="full-circle"
                        height="6"
                        viewBox="0 0 16 16"
                        width="6"
                      >
                        <desc>
                          full-circle
                        </desc>
                        <path
                          d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="Tag--main"
                    >
                      <span
                        class="bp3-tag bp3-minimal"
                        id="tag"
                      >
                        <span
                          class="bp3-text-overflow-ellipsis bp3-fill"
                        >
                          account
                        </span>
                      </span>
                    </span>
                  </div>
                </div>
              </span>
              <span
                class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                icon="chevron-down"
              >
                <svg
                  data-icon="chevron-down"
                  height="14"
                  viewBox="0 0 16 16"
                  width="14"
                >
                  <desc>
                    chevron-down
                  </desc>
                  <path
                    d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <div
          class="bp3-form-group"
          data-id="type-1"
        >
          <label
            class="bp3-label"
            for="type"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="createUpdateSecretForm_type"
            >
              platform.secrets.secret.labelSecretType
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="StyledProps--main"
            >
              
              <div
                class="RadioButtonGroup--inline"
              >
                <label
                  class="RadioButton--radio StyledProps--main"
                >
                  <input
                    checked=""
                    class="RadioButton--input"
                    name="type"
                    type="radio"
                    value="SecretText"
                  />
                  <span
                    class="RadioButton--radioIcon"
                  />
                  platform.secrets.secret.labelText
                </label>
                <label
                  class="RadioButton--radio StyledProps--main"
                >
                  <input
                    class="RadioButton--input"
                    name="type"
                    type="radio"
                    value="SecretFile"
                  />
                  <span
                    class="RadioButton--radioIcon"
                  />
                  platform.secrets.secret.labelFile
                </label>
              </div>
            </div>
          </div>
        </div>
        <span
          class="bp3-popover-wrapper hoverMsg"
        >
          <span
            class="bp3-popover-target hoverMsgTarget"
          >
            <div
              class="InputWithIdentifier--txtNameContainer TextInput--main"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
              >
                <div
                  class="Text--withDocsTooltip"
                  data-tooltip-id="universalInputNameWithId"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    Id
                  </p>
                </div>
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  :
                </p>
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                      tabindex="0"
                    >
                      <span
                        class="bp3-editable-text-content"
                        style="height: 1px; line-height: 1px; min-width: 0;"
                      />
                    </div>
                  </span>
                </span>
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="Edit"
                  style="vertical-align: middle; cursor: pointer;"
                >
                  <svg
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="bp3-form-group"
                data-id="name-2"
              >
                <label
                  class="bp3-label"
                  for="name"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="createUpdateSecretForm_name"
                  >
                    platform.secrets.labelSecretName
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="name"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </span>
        </span>
        <input
          style="display: none;"
          type="text"
        />
        <input
          style="display: none;"
          type="password"
        />
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="value"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="createUpdateSecretForm_value"
            >
              platform.secrets.labelValue
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="value"
                placeholder="platform.secrets.secret.placeholderSecretValue"
                type="password"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="description"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="createUpdateSecretForm_description"
            >
              description (optional)
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <textarea
              autocomplete="off"
              class="bp3-input bp3-fill"
              maxlength="1024"
              name="description"
            />
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="tags"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="createUpdateSecretForm_tags"
            >
              tagsLabel (optional)
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input bp3-tag-input"
            >
              <div
                class="bp3-tag-input-values"
              >
                <input
                  class="bp3-input-ghost"
                  data-mentions="kv-tag-input-tags"
                  placeholder="Type and press enter to create a tag"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <button
          aria-label="save"
          class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--margin-top-large Button--with-current-color Button--variation Button--variation-primary"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            save
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`CreateUpdateSecret Create Text Secret 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="createUpdateSecretForm_secretManagerIdentifier"
            >
              platform.secrets.labelSecretsManager
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
              data-testid="cr-field-secretManagerIdentifier"
              style="width: 100%;"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
                >
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target Text--targetClass"
                    >
                      <p
                        class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
                        tabindex="0"
                      >
                        vault1
                      </p>
                    </span>
                  </span>
                  <div
                    class="rightStatus"
                  >
                    <span
                      class="bp3-icon bp3-icon-full-circle StyledProps--main status greenStatus"
                      data-testid="crf-status"
                      icon="full-circle"
                    >
                      <svg
                        data-icon="full-circle"
                        height="6"
                        viewBox="0 0 16 16"
                        width="6"
                      >
                        <desc>
                          full-circle
                        </desc>
                        <path
                          d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="Tag--main"
                    >
                      <span
                        class="bp3-tag bp3-minimal"
                        id="tag"
                      >
                        <span
                          class="bp3-text-overflow-ellipsis bp3-fill"
                        >
                          account
                        </span>
                      </span>
                    </span>
                  </div>
                </div>
              </span>
              <span
                class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                icon="chevron-down"
              >
                <svg
                  data-icon="chevron-down"
                  height="14"
                  viewBox="0 0 16 16"
                  width="14"
                >
                  <desc>
                    chevron-down
                  </desc>
                  <path
                    d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <span
          class="bp3-popover-wrapper hoverMsg"
        >
          <span
            class="bp3-popover-target hoverMsgTarget"
          >
            <div
              class="InputWithIdentifier--txtNameContainer TextInput--main"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
              >
                <div
                  class="Text--withDocsTooltip"
                  data-tooltip-id="universalInputNameWithId"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    Id
                  </p>
                </div>
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  :
                </p>
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                      tabindex="0"
                    >
                      <span
                        class="bp3-editable-text-content"
                        style="height: 1px; line-height: 1px; min-width: 0;"
                      />
                    </div>
                  </span>
                </span>
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="Edit"
                  style="vertical-align: middle; cursor: pointer;"
                >
                  <svg
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="bp3-form-group"
                data-id="name-0"
              >
                <label
                  class="bp3-label"
                  for="name"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="createUpdateSecretForm_name"
                  >
                    platform.secrets.labelSecretName
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="name"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </span>
        </span>
        <input
          style="display: none;"
          type="text"
        />
        <input
          style="display: none;"
          type="password"
        />
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="value"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="createUpdateSecretForm_value"
            >
              platform.secrets.labelValue
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="value"
                placeholder="platform.secrets.secret.placeholderSecretValue"
                type="password"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="description"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="createUpdateSecretForm_description"
            >
              description (optional)
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <textarea
              autocomplete="off"
              class="bp3-input bp3-fill"
              maxlength="1024"
              name="description"
            />
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="tags"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="createUpdateSecretForm_tags"
            >
              tagsLabel (optional)
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input bp3-tag-input"
            >
              <div
                class="bp3-tag-input-values"
              >
                <input
                  class="bp3-input-ghost"
                  data-mentions="kv-tag-input-tags"
                  placeholder="Type and press enter to create a tag"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <button
          aria-label="save"
          class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--margin-top-large Button--with-current-color Button--variation Button--variation-primary"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            save
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`CreateUpdateSecret Update Text Secret 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <div
          class="bp3-form-group bp3-disabled"
          data-id="null-0"
        >
          <label
            class="bp3-label"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="createUpdateSecretForm_secretManagerIdentifier"
            >
              platform.secrets.labelSecretsManager
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <button
              class="bp3-button bp3-disabled bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
              data-testid="cr-field-secretManagerIdentifier"
              disabled=""
              style="width: 100%;"
              tabindex="-1"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
                >
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target Text--targetClass"
                    >
                      <p
                        class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
                        tabindex="0"
                      >
                        vault1
                      </p>
                    </span>
                  </span>
                  <div
                    class="rightStatus"
                  >
                    <span
                      class="bp3-icon bp3-icon-full-circle StyledProps--main status greenStatus"
                      data-testid="crf-status"
                      icon="full-circle"
                    >
                      <svg
                        data-icon="full-circle"
                        height="6"
                        viewBox="0 0 16 16"
                        width="6"
                      >
                        <desc>
                          full-circle
                        </desc>
                        <path
                          d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="Tag--main"
                    >
                      <span
                        class="bp3-tag bp3-minimal"
                        id="tag"
                      >
                        <span
                          class="bp3-text-overflow-ellipsis bp3-fill"
                        >
                          project
                        </span>
                      </span>
                    </span>
                  </div>
                </div>
              </span>
              <span
                class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                icon="chevron-down"
              >
                <svg
                  data-icon="chevron-down"
                  height="14"
                  viewBox="0 0 16 16"
                  width="14"
                >
                  <desc>
                    chevron-down
                  </desc>
                  <path
                    d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <span
          class="bp3-popover-wrapper hoverMsg"
        >
          <span
            class="bp3-popover-target hoverMsgTarget"
          >
            <div
              class="InputWithIdentifier--txtNameContainer TextInput--main"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
              >
                <div
                  class="Text--withDocsTooltip"
                  data-tooltip-id="universalInputNameWithId"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    Id
                  </p>
                </div>
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  :
                </p>
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
                    >
                      <span
                        class="bp3-editable-text-content"
                        style="height: 1px; line-height: 1px; min-width: 0;"
                      >
                        text1
                      </span>
                    </div>
                  </span>
                </span>
              </div>
              <div
                class="bp3-form-group"
                data-id="name-1"
              >
                <label
                  class="bp3-label"
                  for="name"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="createUpdateSecretForm_name"
                  >
                    platform.secrets.labelSecretName
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="name"
                      type="text"
                      value="text1"
                    />
                  </div>
                </div>
              </div>
            </div>
          </span>
        </span>
        <span
          class="bp3-popover-wrapper hoverMsg"
        >
          <span
            class="bp3-popover-target hoverMsgTarget"
          >
            <div
              class=""
            >
              <label
                class="bp3-control bp3-radio bp3-inline"
              >
                <input
                  checked=""
                  name="Blueprint3.RadioGroup-0"
                  type="radio"
                  value="Inline"
                />
                <span
                  class="bp3-control-indicator"
                />
                platform.secrets.secret.inlineSecret
              </label>
              <label
                class="bp3-control bp3-radio bp3-inline"
              >
                <input
                  name="Blueprint3.RadioGroup-0"
                  type="radio"
                  value="Reference"
                />
                <span
                  class="bp3-control-indicator"
                />
                platform.secrets.secret.referenceSecret
              </label>
            </div>
          </span>
        </span>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="value"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="createUpdateSecretForm_value"
            >
              platform.secrets.labelValue
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="value"
                placeholder="encrypted"
                type="password"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="description"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="createUpdateSecretForm_description"
            >
              description (optional)
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <textarea
              autocomplete="off"
              class="bp3-input bp3-fill"
              maxlength="1024"
              name="description"
            />
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="tags"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="createUpdateSecretForm_tags"
            >
              tagsLabel (optional)
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input bp3-tag-input"
            >
              <div
                class="bp3-tag-input-values"
              >
                <input
                  class="bp3-input-ghost"
                  data-mentions="kv-tag-input-tags"
                  placeholder="Type and press enter to create a tag"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <button
          aria-label="save"
          class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--margin-top-large Button--with-current-color Button--variation Button--variation-primary"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            save
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;
